--- a/addcar.html
+++ b/addcar.html
@@ -106,44 +106,38 @@
         </div>
 
         <!-- Floating Btns -->
-        <div class="floating-buttons justify-content-around" style="display:none;">
-            <button type="button" class="btn btn-primary mx-2" data-target="addcar.html">Add Car</button>
-            <button type="button" class="btn btn-primary mx-2" data-target="setReminder.html">Set Reminder</button>
-            <button type="button" class="btn btn-primary mx-2" data-target="scheduleMaintenance.html">Schedule Maintenance</button>
+        <div class="floating-buttons flex-column align-items-center" style="display:none;">
+            <button type="button" class="btn btn-primary my-2" data-target="addcar.html">Add Car</button>
+            <button type="button" class="btn btn-primary my-2" data-target="setReminder.html">Set Reminder</button>
+            <button type="button" class="btn btn-primary my-2" data-target="scheduleMaintenance.html">Schedule Maintenance</button>
         </div>
         <!-- Footer -->
         <footer class="fixed-bottom bg-light py-2 border-top">
             <div class="container">
-                <div class="row text-center">
+                <div class="row justify-content-center text-center footer-row">
                     <!-- Reminder Button -->
-                    <div class="col">
+                    <div class="col-auto">
                         <a href="index.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
                             <i class="fa-solid fa-clock" style="margin-bottom: 2px;"></i>
                             <div style="margin-top: 2px;">Reminders</div>
                         </a>
                     </div>
                     <!-- Garage Button -->
-                    <div class="col">
+                    <div class="col-auto">
                         <a href="garage.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
                             <i class="fa-solid fa-car" style="margin-bottom: 2px;"></i>
                             <div>Garage</div>
                         </a>
                     </div>
-                    <!-- + Button -->
-                    <div class="col">
-                        <a href="#" id="plusBtn" class="btn btn-primary rounded-circle position-absolute top-0 start-50 translate-middle plus-btn">
-                            <i class="fa-solid fa-plus fa-lg"></i>
-                        </a>
-                    </div>
                     <!-- Mechanic Button -->
-                    <div class="col">
-                        <a href="x.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
+                    <div class="col-auto">
+                        <a href="shops.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
                             <i class="fa-solid fa-map" style="margin-bottom: 2px;"></i>
-                            <div>Map</div>
+                            <div>Workshops</div>
                         </a>
                     </div>
                     <!-- Messages Button -->
-                    <div class="col">
+                    <div class="col-auto">
                         <a href="messages.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
                             <i class="fa-solid fa-message" style="margin-bottom: 2px;"></i>
                             <div>Messages</div>
@@ -152,7 +146,11 @@
                 </div>
             </div>
         </footer>
-
+    
+        <a href="#" id="plusBtn" class="btn btn-primary rounded-circle plus-btn">
+            <i class="fa-solid fa-plus fa-lg"></i>
+        </a>
+        
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
             integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
