--- a/messages.html
+++ b/messages.html
@@ -66,7 +66,7 @@
         <i id="backButton" class="fa-solid fa-arrow-left fa-lg mb-3" style="display: none;"></i>
         <h4 id="chatTitle" class="mb-3"></h4>
         <div id="chatMessages" class="border rounded p-3 mb-3" style="height: 300px; overflow-y: auto; background-color: #f8f9fa;">
-            <!-- Chat messages will appear here -->
+        <!-- Chat messages will appear here -->
         </div>
         <form id="chatForm">
             <div class="input-group">
@@ -78,38 +78,38 @@
         </form>
     </div>
 
+    <div class="floating-buttons flex-column align-items-center" style="display:none;">
+        <button type="button" class="btn btn-primary my-2" data-target="addcar.html">Add Car</button>
+        <button type="button" class="btn btn-primary my-2" data-target="setReminder.html">Set Reminder</button>
+        <button type="button" class="btn btn-primary my-2" data-target="scheduleMaintenance.html">Schedule Maintenance</button>
+    </div>
+
     <footer class="fixed-bottom bg-light py-2 border-top">
         <div class="container">
-            <div class="row text-center">
+            <div class="row justify-content-center text-center footer-row">
                 <!-- Reminder Button -->
-                <div class="col">
+                <div class="col-auto">
                     <a href="index.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
                         <i class="fa-solid fa-clock" style="margin-bottom: 2px;"></i>
                         <div style="margin-top: 2px;">Reminders</div>
                     </a>
                 </div>
                 <!-- Garage Button -->
-                <div class="col">
+                <div class="col-auto">
                     <a href="garage.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
                         <i class="fa-solid fa-car" style="margin-bottom: 2px;"></i>
                         <div>Garage</div>
                     </a>
                 </div>
-                <!-- + Button -->
-                <div class="col">
-                    <a href="#" id="plusBtn" class="btn btn-primary rounded-circle position-absolute top-0 start-50 translate-middle plus-btn">
-                        <i class="fa-solid fa-plus fa-lg"></i>
-                    </a>
-                </div>
                 <!-- Mechanic Button -->
-                <div class="col">
+                <div class="col-auto">
                     <a href="shops.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
                         <i class="fa-solid fa-map" style="margin-bottom: 2px;"></i>
-                        <div>Map</div>
+                        <div>Workshops</div>
                     </a>
                 </div>
                 <!-- Messages Button -->
-                <div class="col">
+                <div class="col-auto">
                     <a href="messages.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
                         <i class="fa-solid fa-message" style="margin-bottom: 2px;"></i>
                         <div>Messages</div>
@@ -119,6 +119,10 @@
         </div>
     </footer>
 
+    <a href="#" id="plusBtn" class="btn btn-primary rounded-circle plus-btn">
+        <i class="fa-solid fa-plus fa-lg"></i>
+    </a>
+    
     <script type="module">
         import { auth, db } from "./js/firebase.js";
         import { collection, query, where, getDocs, addDoc, Timestamp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
@@ -245,5 +249,9 @@
             });
         });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script type="module" src="js/checkAuth.js"></script>
+    <script src="js/plusbtn.js"></script>
 </body>
 </html>
